src/test/ui/nll/closure-requirements/escape-argument-callee.stderr
warning: not reporting region error due to -Znll
  --> $DIR/escape-argument-callee.rs:36:50
   |
36 |         let mut closure = expect_sig(|p, y| *p = y);
   |                                                  ^

error: free region `ReFree(DefId(0/1:9 ~ escape_argument_callee[317d]::test[0]::{{closure}}[0]), BrAnon(3))` does not outlive free region `ReFree(DefId(0/1:9 ~ escape_argument_callee[317d]::test[0]::{{closure}}[0]), BrAnon(2))`
  --> $DIR/escape-argument-callee.rs:36:45
   |
36 |         let mut closure = expect_sig(|p, y| *p = y);
   |                                             ^^^^^^

note: No external requirements
  --> $DIR/escape-argument-callee.rs:36:38
   |
36 |         let mut closure = expect_sig(|p, y| *p = y);
   |                                      ^^^^^^^^^^^^^
   |
   = note: defining type: DefId(0/1:9 ~ escape_argument_callee[317d]::test[0]::{{closure}}[0]) with closure substs [
               i16,
               for<'r, 's, 't0> extern "rust-call" fn((&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 'r)) mut &ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 's)) i32, &ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 't0)) i32))
           ]

note: No external requirements
  --> $DIR/escape-argument-callee.rs:30:1
   |
30 | / fn test() {
31 | |     let x = 44;
32 | |     let mut p = &x;
33 | |
...  |
42 | |     deref(p);
43 | | }
   | |_^
   |
   = note: defining type: DefId(0/0:3 ~ escape_argument_callee[317d]::test[0]) with substs []

error: aborting due to previous error

